--- a/casinos.html
+++ b/casinos.html
@@ -3,107 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Primary SEO Meta -->
-    <title>Best Crypto Casinos 2025: bc.game, BitStarz, Xyes - No KYC, Instant Withdrawals</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💎</text></svg>">
-    <meta name="description" content="Discover the top crypto casinos in 2025: bc.game (live dealers), BitStarz (5000+ games), and Xyes (NFT rewards). All offer no-KYC deposits, instant payouts, and huge bonuses.">
-    <meta name="keywords" content="best crypto casinos 2025, bc.game casino, bitstarz alternative, xyes casino, no kyc crypto casino, instant withdrawal casino, bitcoin gambling, crypto slots, provably fair, crypto betting">
     <meta name="author" content="CryptoHama">
     <meta name="robots" content="index, follow">
+
+    <!-- Primary SEO Meta Tags -->
+    <title>Best Crypto Casinos 2025: bc.game, BitStarz, Xyes - No KYC, Instant Withdrawals</title>
+    <meta name="description" content="Compare bc.game (live dealers), BitStarz (5000+ games), and Xyes (NFT rewards). All offer zero-KYC deposits, instant crypto withdrawals, and massive welcome bonuses.">
+    <meta name="keywords" content="best crypto casinos 2025, bc.game casino, bitstarz alternative, xyes casino, no kyc crypto casino, instant withdrawal casino, bitcoin gambling, crypto slots, provably fair, crypto betting">
+
+    <!-- Canonical URL -->
     <link rel="canonical" href="https://cryptohama.com/casinos.html">
 
-    <!-- Open Graph / Social Media -->
-    <meta property="og:title" content="Top 3 Best Crypto Casinos 2025: bc.game, BitStarz, Xyes - No KYC & Instant Payouts">
-    <meta property="og:description" content="Compare bc.game (live dealers), BitStarz (5000+ games), and Xyes (NFT rewards). All offer zero-KYC deposits, instant crypto withdrawals, and massive welcome bonuses.">
+    <!-- Favicon -->
+    <link rel="icon" href="image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><path d='M50 5 L95 50 L50 95 L5 50 Z' fill='%2300F0FF'/><path d='M50 5 L50 95 L5 50 Z' fill='%23FFD700'/></svg>" type="image/svg+xml">
+
+    <!-- Open Graph / Social Media Meta Tags -->
     <meta property="og:type" content="website">
+    <meta property="og:title" content="Top 3 Best Crypto Casinos 2025: bc.game, BitStarz, Xyes">
+    <meta property="og:description" content="Compare bc.game (live dealers), BitStarz (5000+ games), and Xyes (NFT rewards). All offer zero-KYC deposits, instant crypto withdrawals, and massive welcome bonuses.">
     <meta property="og:url" content="https://cryptohama.com/casinos.html">
-    <meta property="og:image" content="https://scontent.fbir7-1.fna.fbcdn.net/v/t39.30808-1/495802420_716037200944830_1219807960908620704_n.jpg">
+    <meta property="og:image" content="https://bc.game/substation/bc/favicon/favicon-32x32.png">
+    <meta property="og:image:alt" content="Top 3 Crypto Casinos: bc.game, BitStarz, Xyes">
     <meta property="og:site_name" content="CryptoHama">
     <meta property="og:locale" content="en_US">
 
-    <!-- Twitter Card -->
+    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Top 3 Best Crypto Casinos 2025: bc.game, BitStarz, Xyes - No KYC & Instant Payouts">
+    <meta name="twitter:title" content="Top 3 Best Crypto Casinos 2025: bc.game, BitStarz, Xyes">
     <meta name="twitter:description" content="Compare bc.game (live dealers), BitStarz (5000+ games), and Xyes (NFT rewards). All offer zero-KYC deposits, instant crypto withdrawals, and massive welcome bonuses.">
-    <meta name="twitter:image" content="https://scontent.fbir7-1.fna.fbcdn.net/v/t39.30808-1/495802420_716037200944830_1219807960908620704_n.jpg">
+    <meta name="twitter:image" content="https://bc.game/substation/bc/favicon/favicon-32x32.png">
+    <meta name="twitter:image:alt" content="Top 3 Crypto Casinos: bc.game, BitStarz, Xyes">
     <meta name="twitter:creator" content="@CryptoHama">
 
-    <!-- Favicon & Fonts -->
+    <!-- Preconnect for Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>₿</text></svg>">
+
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="styles.css">
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P63D5L004K"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-P63D5L004K');
-    </script>
-
-    <!-- Structured Data — JSON-LD Schema.org -->
+    <!-- Structured Data (Schema.org) -->
     <script type="application/ld+json">
     {
-      "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "Top 3 Best Crypto Casinos 2025: bc.game, BitStarz, Xyes - No KYC & Instant Payouts",
-      "description": "Verified list of the best crypto casinos in 2025 offering instant withdrawals, no-KYC deposits, provably fair games, and huge bonuses. Includes bc.game, BitStarz, and Xyes.",
-      "url": "https://cryptohama.com/casinos.html",
-      "publisher": {
-        "@type": "Organization",
-        "name": "CryptoHama",
-        "logo": {
-          "@type": "ImageObject",
-          "url": "https://cryptohama.com/logo.svg"
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "Top 3 Best Crypto Casinos 2025: bc.game, BitStarz, Xyes",
+        "description": "Verified list of the best crypto casinos in 2025 offering instant withdrawals, no-KYC deposits, provably fair games, and huge bonuses. Includes bc.game, BitStarz, and Xyes.",
+        "url": "https://cryptohama.com/casinos.html",
+        "publisher": {
+            "@type": "Organization",
+            "name": "CryptoHama",
+            "logo": {
+                "@type": "ImageObject",
+                "url": "https://cryptohama.com/logo.svg"
+            }
+        },
+        "mainEntity": {
+            "@type": "ItemList",
+            "name": "Top Crypto Casinos 2025",
+            "itemListElement": [
+                {
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "bc.game",
+                    "description": "Leading crypto casino with live dealers, sports betting, and 3000+ games. Zero-KYC deposits, instant withdrawals, and daily cashback. Uses blockchain-based provable fairness.",
+                    "url": "https://bc.game/i-66d8fbj-n/"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 2,
+                    "name": "BitStarz",
+                    "description": "Licensed online casino with 5000+ slots, table games, and live studios. Offers 5 BTC + 180 free spins bonus. No KYC for deposits under $5K/month. Fastest crypto payouts globally.",
+                    "url": "https://1wfhjt.life/?open=register&p=ukw1"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 3,
+                    "name": "Xyes",
+                    "description": "Social crypto casino featuring community tournaments, NFT rewards, and referral earnings. Zero KYC, supports 15+ cryptos, and unique 'Play-to-Earn' mechanics. Ideal for casual gamblers.",
+                    "url": "https://xyes.com/referrals/6n1at"
+                }
+            ]
+        },
+        "breadcrumb": {
+            "@type": "BreadcrumbList",
+            "itemListElement": [
+                {
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "Home",
+                    "item": "https://cryptohama.com/"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 2,
+                    "name": "Casinos",
+                    "item": "https://cryptohama.com/casinos.html"
+                }
+            ]
         }
-      },
-      "mainEntity": {
-        "@type": "ItemList",
-        "name": "Top Crypto Casinos 2025",
-        "itemListElement": [
-          {
-            "@type": "ListItem",
-            "position": 1,
-            "name": "bc.game",
-            "description": "Leading crypto casino with live dealers, sports betting, and 3000+ games. Zero-KYC deposits, instant withdrawals, and daily cashback. Uses blockchain-based provable fairness.",
-            "url": "https://bc.game/i-66d8fbj-n/"
-          },
-          {
-            "@type": "ListItem",
-            "position": 2,
-            "name": "BitStarz",
-            "description": "Licensed online casino with 5000+ slots, table games, and live studios. Offers 5 BTC + 180 free spins bonus. No KYC for deposits under $5K/month. Fastest crypto payouts globally.",
-            "url": "https://1wfhjt.life/?open=register&p=ukw1"
-          },
-          {
-            "@type": "ListItem",
-            "position": 3,
-            "name": "Xyes",
-            "description": "Social crypto casino featuring community tournaments, NFT rewards, and referral earnings. Zero KYC, supports 15+ cryptos, and unique 'Play-to-Earn' mechanics. Ideal for casual gamblers.",
-            "url": "https://xyes.com/referrals/6n1at"
-          }
-        ]
-      },
-      "breadcrumb": {
-        "@type": "BreadcrumbList",
-        "itemListElement": [
-          {
-            "@type": "ListItem",
-            "position": 1,
-            "name": "Home",
-            "item": "https://cryptohama.com/"
-          },
-          {
-            "@type": "ListItem",
-            "position": 2,
-            "name": "Casinos",
-            "item": "https://cryptohama.com/casinos.html"
-          }
-        ]
-      }
     }
     </script>
 
@@ -111,6 +112,15 @@
     <link rel="preload" as="style" href="styles.css">
     <link rel="prefetch" href="exchanges.html">
     <link rel="prefetch" href="faucets.html">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P63D5L004K"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-P63D5L004K');
+    </script>
 </head>
 <body>
     <div class="gradient-bg"></div>
@@ -123,7 +133,7 @@
                 <div class="nav-menu" id="nav-menu">
                     <ul class="nav-list" role="menubar">
                         <li><a href="index.html" class="nav-link" role="menuitem">Home</a></li>
-                        <li><a href="casinos.html" class="nav-link active" role="menuitem">Casinos</a></li>
+                        <li><a href="casinos.html" class="nav-link active" role="menuitem" aria-current="page">Casinos</a></li>
                         <li><a href="exchanges.html" class="nav-link" role="menuitem">Exchanges</a></li>
                         <li><a href="faucets.html" class="nav-link" role="menuitem">Faucets</a></li>
                     </ul>
@@ -139,44 +149,45 @@
 
     <main>
         <!-- Hero Section -->
-        <section class="page-header" aria-label="Hero section for crypto casinos">
+        <section class="page-header" aria-labelledby="hero-heading">
             <div class="container">
-                <h1 class="page-title">Best Crypto Casinos 2025 & Bitcoin Gambling Sites</h1>
+                <h1 id="hero-heading" class="page-title">Best Crypto Casinos 2025 & Bitcoin Gambling Sites</h1>
                 <p class="page-description">Play slots, live blackjack, roulette, and sports betting with BTC, ETH, LTC, DOGE. No KYC required for deposits. Instant withdrawals, provably fair, and massive bonuses.</p>
             </div>
         </section>
 
-        <!-- Top 10 Casinos -->
+        <!-- Top Casinos -->
         <section class="faucets-top10" aria-labelledby="top10-heading">
             <div class="container">
                 <h2 id="top10-heading" class="section-title">Top Verified Crypto Casinos</h2>
                 <div class="faucets-grid">
 
-<!-- bc.game -->
-<div class="faucet-card">
-    <div class="faucet-header">
-        <div class="faucet-logo">
-            <img src="https://bc.game/substation/bc/favicon/favicon-32x32.png" alt="bc.game Logo - Live Casino & Sports Betting" loading="lazy" width="60" height="60">
-        </div>
-        <div class="faucet-info">
-            <h3>bc.game</h3>
-            <div class="faucet-rating">
-                <span class="stars" aria-label="4.9 out of 5 stars">★★★★★</span>
-                <span class="rating-score">4.9/5</span>
-            </div>
-        </div>
-    </div>
-    <div class="faucet-details">
-        <p><strong>Currencies:</strong> BTC, ETH, LTC, DOGE, SOL, USDT, and 15+ others</p>
-        <p><strong>Bonus:</strong> <strong>200% deposit match up to 5 BTC</strong> + 100 free spins</p>
-        <p><strong>Games:</strong> 3000+ slots, live dealer (roulette, blackjack, poker), sports betting, crash, dice, plinko</p>
-        <p><strong>KYC:</strong> <strong>No KYC required</strong> for deposits or play. Withdrawals >$10K require ID verification.</p>
-        <p><strong>Withdrawal Speed:</strong> Instant (under 1 minute)</p>
-        <p><strong>Speciality:</strong> World’s #1 provably fair casino. Unique “Daily Cashback” and “Game of the Day” tournaments. Trusted by over 10M users.</p>
-    </div>
-    <div class="faucet-actions">
-<a href="#" data-target="https://bc.game/i-66d8fbj-n/" target="_blank" rel="noopener noreferrer" class="btn btn-primary js-redirect">Join Now</a>    </div>
-</div>
+                    <!-- bc.game -->
+                    <div class="faucet-card">
+                        <div class="faucet-header">
+                            <div class="faucet-logo">
+                                <img src="https://bc.game/substation/bc/favicon/favicon-32x32.png" alt="bc.game Logo - Live Casino & Sports Betting" loading="lazy" width="60" height="60">
+                            </div>
+                            <div class="faucet-info">
+                                <h3>bc.game</h3>
+                                <div class="faucet-rating">
+                                    <span class="stars" aria-label="4.9 out of 5 stars">★★★★★</span>
+                                    <span class="rating-score">4.9/5</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="faucet-details">
+                            <p><strong>Currencies:</strong> BTC, ETH, LTC, DOGE, SOL, USDT, and 15+ others</p>
+                            <p><strong>Bonus:</strong> <strong>200% deposit match up to 5 BTC</strong> + 100 free spins</p>
+                            <p><strong>Games:</strong> 3000+ slots, live dealer (roulette, blackjack, poker), sports betting, crash, dice, plinko</p>
+                            <p><strong>KYC:</strong> <strong>No KYC required</strong> for deposits or play. Withdrawals >$10K require ID verification.</p>
+                            <p><strong>Withdrawal Speed:</strong> Instant (under 1 minute)</p>
+                            <p><strong>Speciality:</strong> World’s #1 provably fair casino. Unique “Daily Cashback” and “Game of the Day” tournaments. Trusted by over 10M users.</p>
+                        </div>
+                        <div class="faucet-actions">
+                            <a href="https://bc.game/i-66d8fbj-n/" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Join Now</a>
+                        </div>
+                    </div>
 
                     <!-- BitStarz (via 1wfhjt.life) -->
                     <div class="faucet-card">
@@ -237,22 +248,22 @@
         </section>
 
         <!-- Pro Tips -->
-        <section class="pro-tips">
+        <section class="pro-tips" aria-labelledby="tips-heading">
             <div class="container">
-                <h2 class="section-title">Pro Tips for Safe & Profitable Crypto Gambling</h2>
+                <h2 id="tips-heading" class="section-title">Pro Tips for Safe & Profitable Crypto Gambling</h2>
                 <div class="tips-grid">
                     <div class="tip-card">
-                        <div class="tip-icon">🎲</div>
+                        <div class="tip-icon" aria-hidden="true">🎲</div>
                         <h3>Use Provably Fair Tools</h3>
                         <p>Always verify game outcomes using the casino’s built-in hash verifier. Never trust platforms that don’t offer transparent proof of fairness.</p>
                     </div>
                     <div class="tip-card">
-                        <div class="tip-icon">🛡️</div>
+                        <div class="tip-icon" aria-hidden="true">🛡️</div>
                         <h3>Never Chase Losses</h3>
                         <p>Set daily limits and stick to them. Crypto gambling can be addictive. Use self-exclusion tools if needed.</p>
                     </div>
                     <div class="tip-card">
-                        <div class="tip-icon">💰</div>
+                        <div class="tip-icon" aria-hidden="true">💰</div>
                         <h3>Withdraw Profits Regularly</h3>
                         <p>Don’t let winnings sit on the casino. Transfer profits to your personal wallet immediately to avoid platform risk or account freezes.</p>
                     </div>
@@ -261,9 +272,9 @@
         </section>
 
         <!-- FAQ -->
-        <section class="faq-section">
+        <section class="faq-section" aria-labelledby="faq-heading">
             <div class="container">
-                <h2 class="section-title">Frequently Asked Questions</h2>
+                <h2 id="faq-heading" class="section-title">Frequently Asked Questions</h2>
                 <div class="faq-list">
                     <div class="faq-item">
                         <h3>Are these casinos safe and legitimate?</h3>
@@ -311,7 +322,7 @@
                         </ul>
                         <ul>
                             <li><a href="faucets.html" aria-label="View best crypto faucets">Faucets</a></li>
-                            <li><a href="https://faucetpay.io/?r=cryptohama" aria-label="Join FaucetPay">FaucetPay</a></li>
+                            <li><a href="https://faucetpay.io/?r=cryptohama" aria-label="Join FaucetPay" rel="noopener noreferrer">FaucetPay</a></li>
                         </ul>
                     </div>
                 </div>
@@ -324,19 +335,5 @@
 
     <button id="scrollToTop" aria-label="Scroll to top">↑</button>
     <script src="script.js"></script>
-    <script>
-document.addEventListener('DOMContentLoaded', function() {
-    // Find all links with class 'js-redirect'
-    document.querySelectorAll('.js-redirect').forEach(function(link) {
-        link.addEventListener('click', function(e) {
-            e.preventDefault(); // Prevent default # behavior
-            const targetUrl = this.getAttribute('data-target');
-            if (targetUrl) {
-                window.open(targetUrl, '_blank'); // Open in new tab
-            }
-        });
-    });
-});
-</script>
 </body>
 </html>
