--- a/exchanges.html
+++ b/exchanges.html
@@ -3,111 +3,124 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Primary SEO Meta -->
-    <title>Best Crypto Exchanges 2025: Pionex, Binance, Bybit - Low Fees, No KYC Options</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💎</text></svg>">
-    <meta name="description" content="Discover the top crypto exchanges in 2025: Pionex (zero fees), Binance (largest liquidity), and Bybit (derivatives leader). Low fees, high liquidity, spot trading without KYC, and P2P support.">
-    <meta name="keywords" content="best crypto exchanges 2025, pionex exchange, binance alternative, bybit exchange, no kyc crypto exchange, zero fee exchange, p2p trading, buy crypto without id, fast crypto exchange, decentralized exchange">
     <meta name="author" content="CryptoHama">
     <meta name="robots" content="index, follow">
+
+    <!-- Primary SEO Meta Tags -->
+    <title>Best Crypto Exchanges 2025: Pionex, Binance, Bybit - Low Fees, No KYC</title>
+    <meta name="description" content="Compare Pionex (0% fees), Binance (largest volume), and Bybit (derivatives leader). All offer spot trading without KYC, P2P, and low fees. Ideal for beginners and pros.">
+    <meta name="keywords" content="best crypto exchanges 2025, pionex exchange, binance alternative, bybit exchange, no kyc crypto exchange, zero fee exchange, p2p trading, buy crypto without id, fast crypto exchange, decentralized exchange">
+
+    <!-- Canonical URL -->
     <link rel="canonical" href="https://cryptohama.com/exchanges.html">
-    <!-- Open Graph / Social Media -->
-    <meta property="og:title" content="Top 3 Best Crypto Exchanges 2025: Pionex, Binance, Bybit - Low Fees & No KYC">
-    <meta property="og:description" content="Compare Pionex (zero fees), Binance (largest volume), and Bybit (derivatives leader). All offer spot trading without KYC, P2P, and low fees. Ideal for beginners and pros.">
+
+    <!-- Favicon -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><path d='M50 5 L95 50 L50 95 L5 50 Z' fill='%2300F0FF'/><path d='M50 5 L50 95 L5 50 Z' fill='%23FFD700'/></svg>" type="image/svg+xml">
+
+    <!-- Open Graph / Social Media Meta Tags -->
     <meta property="og:type" content="website">
+    <meta property="og:title" content="Top 3 Best Crypto Exchanges 2025: Pionex, Binance, Bybit">
+    <meta property="og:description" content="Compare Pionex (0% fees), Binance (largest volume), and Bybit (derivatives leader). All offer spot trading without KYC, P2P, and low fees. Ideal for beginners and pros.">
     <meta property="og:url" content="https://cryptohama.com/exchanges.html">
     <meta property="og:image" content="https://cryptohama.com/images/exchanges-hero.jpg">
+    <meta property="og:image:alt" content="Top 3 Crypto Exchanges: Pionex, Binance, Bybit">
     <meta property="og:site_name" content="CryptoHama">
     <meta property="og:locale" content="en_US">
-    <!-- Twitter Card -->
+
+    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Top 3 Best Crypto Exchanges 2025: Pionex, Binance, Bybit - Low Fees & No KYC">
-    <meta name="twitter:description" content="Compare Pionex (zero fees), Binance (largest volume), and Bybit (derivatives leader). All offer spot trading without KYC, P2P, and low fees. Ideal for beginners and pros.">
+    <meta name="twitter:title" content="Top 3 Best Crypto Exchanges 2025: Pionex, Binance, Bybit">
+    <meta name="twitter:description" content="Compare Pionex (0% fees), Binance (largest volume), and Bybit (derivatives leader). All offer spot trading without KYC, P2P, and low fees. Ideal for beginners and pros.">
     <meta name="twitter:image" content="https://cryptohama.com/images/exchanges-hero.jpg">
+    <meta name="twitter:image:alt" content="Top 3 Crypto Exchanges: Pionex, Binance, Bybit">
     <meta name="twitter:creator" content="@CryptoHama">
-    <!-- Favicon & Fonts -->
+
+    <!-- Preconnect for Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>₿</text></svg>">
+
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="styles.css">
-    
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-P63D5L004K"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-P63D5L004K');
-</script>
-
-    <!-- Structured Data — JSON-LD Schema.org -->
+    <!-- Structured Data (Schema.org) -->
     <script type="application/ld+json">
     {
-      "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "Top 3 Best Crypto Exchanges 2025: Pionex, Binance, Bybit - Low Fees & No KYC",
-      "description": "Verified list of the top crypto exchanges in 2025 offering zero or low fees, high liquidity, and optional no-KYC spot trading for BTC, ETH, SOL, TON, DOGE. Includes Pionex, Binance, and Bybit.",
-      "url": "https://cryptohama.com/exchanges.html",
-      "publisher": {
-        "@type": "Organization",
-        "name": "CryptoHama",
-        "logo": {
-          "@type": "ImageObject",
-          "url": "https://cryptohama.com/logo.svg"
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "Top 3 Best Crypto Exchanges 2025: Pionex, Binance, Bybit",
+        "description": "Verified list of the top crypto exchanges in 2025 offering zero or low fees, high liquidity, and optional no-KYC spot trading for BTC, ETH, SOL, TON, DOGE. Includes Pionex, Binance, and Bybit.",
+        "url": "https://cryptohama.com/exchanges.html",
+        "publisher": {
+            "@type": "Organization",
+            "name": "CryptoHama",
+            "logo": {
+                "@type": "ImageObject",
+                "url": "https://cryptohama.com/logo.svg"
+            }
+        },
+        "mainEntity": {
+            "@type": "ItemList",
+            "name": "Top Crypto Exchanges 2025",
+            "itemListElement": [
+                {
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "Pionex",
+                    "description": "Zero-trading-fee exchange with 16 built-in bots. Supports 200+ coins, P2P, and non-KYC spot trading. Ideal for automated traders and beginners.",
+                    "url": "https://accounts.pionex.com/en/signUp?r=0p9WWKppAvt"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 2,
+                    "name": "Binance",
+                    "description": "Largest global crypto exchange by volume. Offers spot, futures, P2P, staking, and a 20% discount on fees with BNB. Non-KYC spot trading available for small amounts.",
+                    "url": "https://www.binance.com/referral/earn-together/refer-in-hotsummer/claim?hl=en&ref=GRO_20338_CP0DP&utm_source=default"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 3,
+                    "name": "Bybit",
+                    "description": "Leading derivatives exchange with $20B+ daily volume. Spot trading supports 200+ coins with optional no-KYC. Excellent mobile app and copy trading features.",
+                    "url": "https://www.bybit.com/invite?ref=BW9GWKR"
+                }
+            ]
+        },
+        "breadcrumb": {
+            "@type": "BreadcrumbList",
+            "itemListElement": [
+                {
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "Home",
+                    "item": "https://cryptohama.com/"
+                },
+                {
+                    "@type": "ListItem",
+                    "position": 2,
+                    "name": "Exchanges",
+                    "item": "https://cryptohama.com/exchanges.html"
+                }
+            ]
         }
-      },
-      "mainEntity": {
-        "@type": "ItemList",
-        "name": "Top Crypto Exchanges 2025",
-        "itemListElement": [
-          {
-            "@type": "ListItem",
-            "position": 1,
-            "name": "Pionex",
-            "description": "Zero-trading-fee exchange with 16 built-in bots. Supports 200+ coins, P2P, and non-KYC spot trading. Ideal for automated traders and beginners.",
-            "url": "https://accounts.pionex.com/en/signUp?r=0p9WWKppAvt"
-          },
-          {
-            "@type": "ListItem",
-            "position": 2,
-            "name": "Binance",
-            "description": "Largest global crypto exchange by volume. Offers spot, futures, P2P, staking, and a 20% discount on fees with BNB. Non-KYC spot trading available for small amounts.",
-            "url": "https://www.binance.com/referral/earn-together/refer-in-hotsummer/claim?hl=en&ref=GRO_20338_CP0DP&utm_source=default"
-          },
-          {
-            "@type": "ListItem",
-            "position": 3,
-            "name": "Bybit",
-            "description": "Leading derivatives exchange with $20B+ daily volume. Spot trading supports 200+ coins with optional no-KYC. Excellent mobile app and copy trading features.",
-            "url": "https://www.bybit.com/invite?ref=BW9GWKR"
-          }
-        ]
-      },
-      "breadcrumb": {
-        "@type": "BreadcrumbList",
-        "itemListElement": [
-          {
-            "@type": "ListItem",
-            "position": 1,
-            "name": "Home",
-            "item": "https://cryptohama.com/"
-          },
-          {
-            "@type": "ListItem",
-            "position": 2,
-            "name": "Exchanges",
-            "item": "https://cryptohama.com/exchanges.html"
-          }
-        ]
-      }
     }
     </script>
+
     <!-- Preload critical resources -->
     <link rel="preload" as="style" href="styles.css">
     <link rel="prefetch" href="casinos.html">
     <link rel="prefetch" href="faucets.html">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P63D5L004K"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-P63D5L004K');
+    </script>
 </head>
 <body>
     <div class="gradient-bg"></div>
@@ -121,7 +134,7 @@
                     <ul class="nav-list" role="menubar">
                         <li><a href="index.html" class="nav-link" role="menuitem">Home</a></li>
                         <li><a href="casinos.html" class="nav-link" role="menuitem">Casinos</a></li>
-                        <li><a href="exchanges.html" class="nav-link active" role="menuitem">Exchanges</a></li>
+                        <li><a href="exchanges.html" class="nav-link active" role="menuitem" aria-current="page">Exchanges</a></li>
                         <li><a href="faucets.html" class="nav-link" role="menuitem">Faucets</a></li>
                     </ul>
                 </div>
@@ -135,15 +148,14 @@
     </header>
     <main>
         <!-- Hero Section -->
-        <section class="page-header" aria-label="Hero section for crypto exchanges">
+        <section class="page-header" aria-labelledby="hero-heading">
             <div class="container">
-                <h1 class="page-title">Best Crypto Exchanges 2025 and Bitcoin Trading Platforms</h1>
+                <h1 id="hero-heading" class="page-title">Best Crypto Exchanges 2025 and Bitcoin Trading Platforms</h1>
                 <p class="page-description">Trade BTC, ETH, DOGE, TON, SOL, LTC with ultra-low fees, high liquidity, and optional no-KYC spot trading. Discover Pionex, Binance, and Bybit.</p>
-
             </div>
         </section>
 
-        <!-- Top 10 Exchanges -->
+        <!-- Top Exchanges -->
         <section class="faucets-top10" aria-labelledby="top10-heading">
             <div class="container">
                 <h2 id="top10-heading" class="section-title">Top Verified Crypto Exchanges</h2>
@@ -235,22 +247,22 @@
         </section>
 
         <!-- Pro Tips -->
-        <section class="pro-tips">
+        <section class="pro-tips" aria-labelledby="tips-heading">
             <div class="container">
-                <h2 class="section-title">Pro Tips for Safe & Profitable Trading</h2>
+                <h2 id="tips-heading" class="section-title">Pro Tips for Safe & Profitable Trading</h2>
                 <div class="tips-grid">
                     <div class="tip-card">
-                        <div class="tip-icon">💰</div>
+                        <div class="tip-icon" aria-hidden="true">💰</div>
                         <h3>Use Limit Orders</h3>
                         <p>Set your own price with limit orders instead of market orders. This prevents slippage and gives you better control over entry/exit points.</p>
                     </div>
                     <div class="tip-card">
-                        <div class="tip-icon">🛡️</div>
+                        <div class="tip-icon" aria-hidden="true">🛡️</div>
                         <h3>Withdraw to Cold Wallet</h3>
                         <p>Never leave large sums on an exchange. Transfer profits to a hardware wallet (Ledger, Trezor) or secure software wallet like Trust Wallet.</p>
                     </div>
                     <div class="tip-card">
-                        <div class="tip-icon">📊</div>
+                        <div class="tip-icon" aria-hidden="true">📊</div>
                         <h3>Research Before Buying</h3>
                         <p>Check tokenomics, team, community, and roadmap. Avoid pumps driven only by social media hype. Use tools like CoinGecko and DEXScreener.</p>
                     </div>
@@ -259,9 +271,9 @@
         </section>
 
         <!-- FAQ -->
-        <section class="faq-section">
+        <section class="faq-section" aria-labelledby="faq-heading">
             <div class="container">
-                <h2 class="section-title">Frequently Asked Questions</h2>
+                <h2 id="faq-heading" class="section-title">Frequently Asked Questions</h2>
                 <div class="faq-list">
                     <div class="faq-item">
                         <h3>Are these exchanges safe?</h3>
@@ -309,7 +321,7 @@
                         </ul>
                         <ul>
                             <li><a href="faucets.html" aria-label="View best crypto faucets">Faucets</a></li>
-                            <li><a href="https://faucetpay.io/?r=cryptohama" aria-label="Join FaucetPay">FaucetPay</a></li>
+                            <li><a href="https://faucetpay.io/?r=cryptohama" aria-label="Join FaucetPay" rel="noopener noreferrer">FaucetPay</a></li>
                         </ul>
                     </div>
                 </div>
